# readmegen

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
readmegen/: __init__.py  cli.py  config.py  generator.py  scanner.py
tests/: test_scanner.py
